# DaWae

./: .gitignore  CMakeLists.txt  Makefile  testbench.csv  testbench.md
src/: .nfs00000005e007400200001531  Errors.h  Instruction.cpp  Instruction.h  Simulator.cpp  System.cpp  System.h  simulator.cpp
test/: mips_testbench  mips_testbench.py
test/output/: addu.02.mips.out  and.02.mips.out  divu.02.mips.out  divu.07.mips.out  function.04.mips.out  lb.16.mips.out  lwl.02.mips.out  lwl.03.mips.out  lwl.04.mips.out  lwr.01.mips.out  lwr.02.mips.out  lwr.03.mips.out  lwr.04.mips.out  nor.03.mips.out  xori.02.mips.out
test/src/: add.01.s  add.02.s  add.03.s  add.04.s  add.05.s  add.06.s  add.07.s  addi.01.s  addi.02.s  addi.03.s  addi.04.s  addiu.01.s  addiu.02.s  addiu.03.s  addiu.04.s  addiu.05.s  addu.01.s  addu.02.s  addu.03.s  and.01.s  and.02.s  and.03.s  andi.01.s  andi.02.s  andi.03.s  beq.01.s  beq.02.s  beq.03.s  beq.04.s  beq.05.s  beq.06.s  bgez.01.s  bgez.02.s  bgez.03.s  bgez.04.s  bgez.05.s  bgez.06.s  bgezal.01.s  bgezal.02.s  bgezal.03.s  (+297 more)
